fix spacing of elements within a blockquote

--- a/static/style.css
+++ b/static/style.css
@@ -115,9 +115,13 @@ main {
     width: 94%;
 }
 
-blockquote > p {
+blockquote > * {
+  margin: 5px;
+}
+
+blockquote {
   background-color: var(--background-light);
-  padding: 10px;
+  padding: 5px;
   border-radius: 10px;
   font-style: italic;
 }
